--- a/public/style.css
+++ b/public/style.css
@@ -73,13 +73,14 @@ img {
     justify-content: space-between;
     align-items: center;
     width: 80%;
-    height: 40%;
+    height: 30%;
     padding: 2%;
     margin-top: 2%;
     font-size: 5vw;
 }
 
-.title {
+.title,
+.reset {
     width: 100%;
     text-align: center;
     font-size: 5vw;
@@ -110,14 +111,19 @@ button {
     font-size: 3rem;
 }
 
-.stitch-minus,
 .number,
-.stitch-plus,
-.row-minus,
-.row-plus {
+.count {
     width: 30%;
     display: flex;
     flex-direction: column;
     text-align: center;
     justify-content: center;
+}
+
+.up {
+    color: #086788;
+}
+
+.down {
+    color: #ff6f59;
 }
