--- a/public/style.css
+++ b/public/style.css
@@ -86,7 +86,8 @@ img {
     font-size: 5vw;
 }
 
-.counter {
+.counter,
+.settings {
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
@@ -96,23 +97,30 @@ img {
 }
 
 .number,
+#increment,
 button {
     border: #23967f 2px solid;
     border-radius: 30px;
     padding: 1%;
-
     color: inherit;
     background-color: white;
+    font-size: 3rem;
+}
+
+.submit,
+#increment {
+    font-size: 1rem;
+    width: 30%;
 }
 
 button {
     height: 100%;
     width: 100%;
-    font-size: 3rem;
 }
 
 .number,
-.count {
+.count,
+#increment {
     width: 30%;
     display: flex;
     flex-direction: column;
