--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,44 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* page header */
+.banner {
+    width: 100%;
+    height: 15vh;
+    border: red 2px solid;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.name {
+    height: 15vh;
+    color: blue;
+    font-size: 2rem;
+    font-style: italic;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo {
+    height: 15vh;
+    width: 15vh;
+}
+
+/* welcome component */
+
+.welcome {
+    height: 83vh;
+    flex-direction: row;
 }
