--- a/public/style.css
+++ b/public/style.css
@@ -14,26 +14,34 @@
 .banner {
     width: 100%;
     height: 15vh;
-    border: red 2px solid;
+    background-image: linear-gradient(
+        90deg,
+        transparent,
+        rgba(0, 0, 255, 0.25),
+        rgba(0, 0, 255, 0.5),
+        rgb(0, 0, 255)
+    );
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: left;
 }
 
-.name {
+.name p {
+    font-family: "Satisfy", cursive;
+    width: 75%;
     height: 15vh;
     color: blue;
-    font-size: 2rem;
+    font-size: 3rem;
     font-style: italic;
     font-weight: bold;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: left;
 }
 
 .logo {
-    height: 15vh;
-    width: 15vh;
+    height: 100%;
+    margin: 0 1rem;
 }
 
 /* welcome component */
