--- a/public/style.css
+++ b/public/style.css
@@ -6,17 +6,48 @@
 
 .container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
 }
 
-/* page header */
-.banner {
+/*navigation */
+#nav-bar {
+    background: rgb(0, 0, 255);
+
+    background-image: linear-gradient(
+        180deg,
+        white 15%,
+        rgba(0, 0, 255, 0.25),
+        rgba(0, 0, 255, 0.5),
+        rgb(0, 0, 255)
+    );
+    height: 100%;
+    height: 100vh;
+    width: 10vw;
+    left: 0;
+}
+
+#logo {
     width: 100%;
-    height: 15vh;
+    height: 10vw;
+    background-color: transparent;
+}
+
+/* page header */
+#main-section {
+    width: 85%;
+    height: 100%;
+    height: 100vh;
+}
+
+#banner {
+    width: 100%;
+    height: 10%;
+    height: 10vw;
+    background-color: rgba(0, 0, 255, 0.5);
     background-image: linear-gradient(
         90deg,
-        transparent,
+        white,
         rgba(0, 0, 255, 0.25),
         rgba(0, 0, 255, 0.5),
         rgb(0, 0, 255)
@@ -24,29 +55,30 @@
     display: flex;
     align-items: center;
     justify-content: left;
+    position: relative;
 }
-
-.name p {
+#stash-track-title {
+    width: 100%;
+    margin-left: 5%;
+}
+#stash-track-title > p {
     font-family: "Satisfy", cursive;
-    width: 75%;
-    height: 15vh;
-    color: blue;
+    color: rgb(0, 0, 120);
     font-size: 3rem;
     font-style: italic;
     font-weight: bold;
-    display: flex;
-    align-items: center;
-    justify-content: left;
 }
 
-.logo {
+#display {
+    width: 100%;
     height: 100%;
-    margin: 0 1rem;
+    background-color: pink;
 }
 
 /* welcome component */
 
 .welcome {
-    height: 83vh;
+    height: 100%;
+    width: 100%;
     flex-direction: row;
 }
