--- a/public/style.css
+++ b/public/style.css
@@ -2,77 +2,73 @@
     margin: 0;
     padding: 0;
     font-family: "Roboto", sans-serif;
+    box-sizing: border-box;
 }
 
-.container {
+.centred {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
 }
 
-/*navigation */
-#nav-bar {
-    background: rgb(0, 0, 255);
+/* main display */
 
-    background-image: linear-gradient(
-        180deg,
-        white 15%,
-        rgba(0, 0, 255, 0.25),
-        rgba(0, 0, 255, 0.5),
-        rgb(0, 0, 255)
-    );
-    height: 100%;
+#app {
+    display: grid;
+    grid-template-columns: 1fr 10fr;
+    grid-template-rows: 1fr 10fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
     height: 100vh;
-    width: 10vw;
-    left: 0;
+    width: 100vw;
+    background: rgba (0, 0, 255, 0.5);
+    background: linear-gradient(
+        135deg,
+        rgba(255, 255, 255, 1) 1%,
+        rgba(0, 0, 255, 1) 20%
+    );
 }
 
 #logo {
-    width: 100%;
+    grid-area: 1 / 1 / 2 / 2;
+    width: 10vw;
     height: 10vw;
-    background-color: transparent;
+    padding: 2%;
 }
 
-/* page header */
-#main-section {
-    width: 85%;
-    height: 100%;
-    height: 100vh;
+#nav-bar {
+    grid-area: 2 / 1 / 3 / 2;
 }
 
 #banner {
-    width: 100%;
-    height: 10%;
-    height: 10vw;
-    background-color: rgba(0, 0, 255, 0.5);
-    background-image: linear-gradient(
-        90deg,
-        white,
-        rgba(0, 0, 255, 0.25),
-        rgba(0, 0, 255, 0.5),
-        rgb(0, 0, 255)
-    );
+    grid-area: 1 / 2 / 2 / 3;
     display: flex;
     align-items: center;
     justify-content: left;
-    position: relative;
 }
+
 #stash-track-title {
     width: 100%;
-    margin-left: 5%;
+    margin-left: 2%;
 }
 #stash-track-title > p {
     font-family: "Satisfy", cursive;
-    color: rgb(0, 0, 120);
-    font-size: 3rem;
+    color: rgb(0, 0, 0);
+    font-size: 300%;
     font-style: italic;
     font-weight: bold;
 }
 
-#display {
-    width: 100%;
-    height: 100%;
-    background-color: pink;
+#display-area {
+    grid-area: 2 / 2 / 3 / 3;
+    padding: 10px;
+    background-color: white;
+    border-top-left-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 /* welcome component */
@@ -80,5 +76,4 @@
 .welcome {
     height: 100%;
     width: 100%;
-    flex-direction: row;
 }
