--- a/public/style.css
+++ b/public/style.css
@@ -23,11 +23,7 @@
     height: 100vh;
     width: 100vw;
     background: rgba (0, 0, 255, 0.5);
-    background: linear-gradient(
-        135deg,
-        rgba(255, 255, 255, 1) 1%,
-        rgba(0, 0, 255, 1) 20%
-    );
+    background: linear-gradient(135deg, #ffffff 1%, #0000ff 20%);
 }
 
 #logo {
@@ -55,9 +51,14 @@
 #stash-track-title > p {
     font-family: "Satisfy", cursive;
     color: rgb(0, 0, 0);
-    font-size: 300%;
+    font-size: 400%;
     font-style: italic;
     font-weight: bold;
+    background: -webkit-linear-gradient(0deg, #000000 3%, #0000ff 8%, #fff 10%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    padding-left: 5px;
 }
 
 #display-area {
